--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USER }}/koyeb-js:latest
+          tags: ${{ secrets.DOCKERHUB_USER }}/koyeb-python:latest
